fixed 1px horizontal scroll bug

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -4,16 +4,20 @@
 
 body {
   background-color: #7FCAFF;
-  padding: 15px;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: Arial;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  /* width: 100%; */
 }
 
 #nav {
   background-color: #4786B2;
   /* border-bottom: white 3px solid; */
   overflow: hidden;
+  /* position: fixed; */
+  /* width: 100%; */
   /* box-shadow: var(--box-shadow); */
 }
 
@@ -35,14 +39,18 @@ body {
   cursor: pointer;
 }
 
-#display {
+#display{
   padding: 0px 20px 20px 20px;
   margin: -1px;
 }
 
-#select-map {
-  box-shadow: var(--box-shadow);
+#counter{
+  padding: 0px 20px 0px 20px;
 }
+
+/* #select-map {
+  box-shadow: var(--box-shadow);
+} */
 
 #country-map {
   height: 300px;
